--- a/ScanQr.html
+++ b/ScanQr.html
@@ -1,3 +1,3 @@
 <div>
-    <oj-button id="scanButton" on-oj-action="[[scanQR]]">Scan QR</oj-button>
+    <oj-button id="scanButton" on-oj-action="[[scanQrBTN]]">Scan QR</oj-button>
 </div>
